al crear una pregunta, actualizo los campos has_media/multiple_choice/written de exam template
